--- a/testing/Shor15.ipynb
+++ b/testing/Shor15.ipynb
@@ -48,8 +48,9 @@
     "import numpy as np\n",
     "import math\n",
     "\n",
-    "provider = QuantumRingsProvider(token =<YOUR_TOKEN_HERE>, name=<YOUR_ACCOUNT_NAME_HERE>)\n",
-    "backend = provider.get_backend(\"scarlet_quantum_rings\")\n",
+    "from QR_secrets import *\n",
+    "# provider = QuantumRingsProvider(token =<YOUR_TOKEN_HERE>, name=<YOUR_ACCOUNT_NAME_HERE>)\n",
+    "# backend = provider.get_backend(\"scarlet_quantum_rings\")\n",
     "shots = 1024\n",
     "\n",
     "provider.active_account()"
@@ -240,7 +241,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "iquhack",
    "language": "python",
    "name": "python3"
   },
